Fix bootstrap 2 relics

--- a/html/post-catching-criminal.html
+++ b/html/post-catching-criminal.html
@@ -14,15 +14,18 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown active">
@@ -33,11 +36,15 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
+                          <li><a href="post-teenagers.html">ביה”ס יכול להכריח אותי?</a></li>
+
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li class="active"><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
                           <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
+                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -80,6 +87,8 @@
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
+                          <li><a href="post-shtikipedia.html">שטיקיפדיה</a></li>
+
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
@@ -91,9 +100,9 @@
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
-                          <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
-
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
+                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -101,15 +110,15 @@
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
-                          <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
-
-                          <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
-
-                          <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
-                          <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
+                          <li><a href="post-flier.html">⎙ הדפיסו פלאיירים</a></li>
+
+                          <li><a href="post-sucker-sticker.html">⎙ סטיקר “יצאת פראייר”</a></li>
+
+                          <li><a href="post-sefach.html">⎙ ספח מחאה לת.ז. ישנה</a></li>
+
+                          <li><a href="post-smbc-comics-nothing-to-hide.html">⎙ קומיקס להדפסה</a></li>
                       </ul>
                   </li>
                   <li class="dropdown">
