--- a/html/post-forgery-statistics.html
+++ b/html/post-forgery-statistics.html
@@ -14,15 +14,18 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown active">
@@ -33,11 +36,15 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
+                          <li><a href="post-teenagers.html">ביה”ס יכול להכריח אותי?</a></li>
+
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
                           <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
+                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -80,6 +87,8 @@
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
+                          <li><a href="post-shtikipedia.html">שטיקיפדיה</a></li>
+
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
@@ -91,9 +100,9 @@
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
-                          <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
-
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
+                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -101,15 +110,15 @@
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
-                          <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
-
-                          <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
-
-                          <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
-                          <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
+                          <li><a href="post-flier.html">⎙ הדפיסו פלאיירים</a></li>
+
+                          <li><a href="post-sucker-sticker.html">⎙ סטיקר “יצאת פראייר”</a></li>
+
+                          <li><a href="post-sefach.html">⎙ ספח מחאה לת.ז. ישנה</a></li>
+
+                          <li><a href="post-smbc-comics-nothing-to-hide.html">⎙ קומיקס להדפסה</a></li>
                       </ul>
                   </li>
                   <li class="dropdown">
@@ -161,7 +170,7 @@
             
             <p dir="rtl">לא ידוע. במשרד הפנים אין נתונים בנוגע לכמה תעודות מזוייפות קיימות כיום בישראל. למרות העדר המידע, &#8220;נתון&#8221; שכזה הובא פעמים רבות (<a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=36m26s" target="_blank">ובלהט</a>) כדי להצדיק לכאורה את הקמת המאגר: <em>&#8220;יש כיום 350,000 תעודות זהות מזוייפות בישראל&#8221;.</em></p>
 <p dir="rtl">גם אם נתון זה היה נכון, תעודת זהות חכמה <strong>בלי מאגר</strong> <a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=48m40s" target="_blank">היתה פותרת את הבעיה בכ-99% המקרים</a> (ואת האחוז הנוסף בו פקיד עשוי להנפיק תעודה מזוייפת עקב הונאה/שוחד/סחיטה/וכו&#8217; עדיף היה לפתור באמצעות <strong>עבודת</strong> בילוש, ולא על ידי הפיכתנו ל<a href="post-the-problem.html" target="_blank">מדינת בילוש</a> כ&#8221;אמצעי יעול&#8221; ש&#8221;יחסוך&#8221; עבודה כזו).</p>
-<p dir="rtl">למרות הכל &#8211; מופרכות הנתון הזה <strong>מעידה על רמת הרצינות של קברניטי המאגר</strong>, לכן חשוב לראות מה אומר על הנושא <a href="http://is.gd/mevaker2010tz" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>:</p>
+<p dir="rtl">למרות הכל &#8211; מופרכות הנתון הזה <strong>מעידה על רמת הרצינות של קברניטי המאגר</strong>, לכן חשוב לראות מה אומר על הנושא <a href="http://is.gd/mevaker2010tzdocx" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>:</p>
 <p dir="rtl">עמוד 1181</p>
 <blockquote>
 <p dir="rtl">במכתב ששלח המשנה ליועץ המשפטי לממשלה (ייעוץ) ביולי 2008 אל מנכ&#8221;ל המשרד דאז, בנושא תזכיר החוק, ציין שלמרות הבקשות שהפנה למשרד ולמשטרת ישראל, טרם קיבל את המידע המבוקש בדבר &#8220;היקף תופעת &#8216;גניבת הזהות&#8217; בישראל, שהיא אחד הבסיסים החשובים לצורך בהקמתו של מאגר ביומטרי&#8221;. עוד ציין שדברי ההסבר להצעת החוק אינם כוללים נתונים בעניין מספר האנשים שהתלוננו על כך שנעשה שימוש בזהותם בלי ידיעתם, ועל מספר האנשים שהשתמשו בזהות גנובה ונתפסו. בתגובה שלח מנכ&#8221;ל המשרד למשנה ליועץ המשפטי לממשלה (ייעוץ) מכתב ובו עסק בנושאים שהעלה. הוא ציין כי אין במשרד נתונים בעניין היקף תופעת &#8220;גנבת הזהות&#8221; וכי המשטרה הודיעה שתספק נתונים בנושא, אך טרם עשתה כן.</p>
