--- a/html/post-mfaq.html
+++ b/html/post-mfaq.html
@@ -14,15 +14,18 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown active">
@@ -33,11 +36,15 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
+                          <li><a href="post-teenagers.html">ביה”ס יכול להכריח אותי?</a></li>
+
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
                           <li class="active"><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
+                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -80,6 +87,8 @@
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
+                          <li><a href="post-shtikipedia.html">שטיקיפדיה</a></li>
+
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
@@ -91,9 +100,9 @@
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
-                          <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
-
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
+                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -101,15 +110,15 @@
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
-                          <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
-
-                          <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
-
-                          <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
-                          <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
+                          <li><a href="post-flier.html">⎙ הדפיסו פלאיירים</a></li>
+
+                          <li><a href="post-sucker-sticker.html">⎙ סטיקר “יצאת פראייר”</a></li>
+
+                          <li><a href="post-sefach.html">⎙ ספח מחאה לת.ז. ישנה</a></li>
+
+                          <li><a href="post-smbc-comics-nothing-to-hide.html">⎙ קומיקס להדפסה</a></li>
                       </ul>
                   </li>
                   <li class="dropdown">
@@ -169,11 +178,11 @@
 </div>
 <p dir="rtl" style="text-align: right;"><strong>ת</strong>: לא. המידע הזה נשמר בידי צה&#8221;ל ואינו מגיע למאגר הביומטרי של מדינת ישראל. ייתכן וצה&#8221;ל עושה שימוש בטביעת האצבע שלך ללא הסכמתך אך לנו לא ידוע על כך.</p>
 <p dir="rtl" style="text-align: right;">כעיקרון מנחה, כניסה למאגר הביומטרי עצמו חייבת להיעשות תוך מתן תמונת פנים בנוסף לטביעות האצבע וחתימתך על הסכמה להכנס למאגר הביומטרי. ללא כל אלו, המדינה אינה רשאית להכניס את הביומטריה שלך למאגר.</p>
-<p><a title="By Ingvar Kjøllesdal (originally posted to Flickr as DSC_2470) [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3APaint_on_hands.jpg" target="_blank"><img class="alignleft" alt="Paint on hands" src="//upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Paint_on_hands.jpg/512px-Paint_on_hands.jpg" width="512" height="340" style="max-width:100%;height:auto" /></a></p>
+<p><a title="By Ingvar Kjøllesdal (originally posted to Flickr as DSC_2470) [CC-BY-2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons" href="http://commons.wikimedia.org/wiki/File%3APaint_on_hands.jpg" target="_blank"><img class="alignleft" style="max-width: 100%; height: auto;" alt="Paint on hands" src="//upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Paint_on_hands.jpg/512px-Paint_on_hands.jpg" width="512" height="340" /></a></p>
 <h3 dir="rtl" style="text-align: right;">נתב&#8221;ג</h3>
 <p dir="rtl"><strong>ש</strong>: שלום, צפיתי בסרטון של הראיון עם קופמן וליף ועוד בנוגע למאגר, ונדב פרי אמר בפתיחה שמי ששם כף ידו בשדה התעופה כבר נכנס אוטומטית למאגר הביומטרי. האם זה נכון? אם כן, האם יש אפשרות לצאת משם? אשמח אם תפרסמו הבהרה בנושא.</p>
 <p dir="rtl"><strong>ת</strong>: הזיהוי הביומטרי בנתב&#8221;ג מכונה זיהוי גיאומטרי של כף היד הוא שונה לחלוטין מהמאגר הביומטרי ואינו כולל טביעות אצבע או תמונת פנים כפי שמצריך המאגר הביומטרי שמנסה לנהל משרד הפנים. בכל מקרה, גם אם יש ברשות מישהו את טביעות האצבע שלך ותמונת פנים באיכות ביומטרית, לא אמורה להיות אפשרות להכניס את הפרטים הללו למאגר הביומטרי ללא הסכמה מפורשת וחתומה מידך. בקטע הוידאו הבא המנחה טועה וקופמן וליף עשו שיעורי בית. במהלכו אגב, שר הפנים לשעבר רוני בראון לא מבין למה צריך את המאגר.</p>
-<p><iframe src="//www.youtube.com/embed/4zqiyzgguVk?list=PLD3C1ACEC3C8E423C" height="315" width="560" style="max-width:100%" allowfullscreen="" frameborder="0"></iframe></p>
+<p><iframe style="max-width: 100%;" src="//www.youtube.com/embed/4zqiyzgguVk?list=PLD3C1ACEC3C8E423C" height="315" width="560" allowfullscreen="" frameborder="0"></iframe></p>
 <h3 dir="rtl" style="text-align: right;"></h3>
 <h3 dir="rtl" style="text-align: right;">לשכת אבטלה</h3>
 <p dir="rtl"><strong>ש</strong>: חתמתי השנה אבטלה. החתימה מתבצעת בהעברת אצבע על המחשב. יש לכם מושג האם זה אומר שהלך עליי והאצבע שלי תיכנס למאגר כשזה יהיה? תודה יום טוב</p>
