--- a/html/post-know-more.html
+++ b/html/post-know-more.html
@@ -14,15 +14,18 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
@@ -33,11 +36,15 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
+                          <li><a href="post-teenagers.html">ביה”ס יכול להכריח אותי?</a></li>
+
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
                           <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
+                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -80,6 +87,8 @@
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
+                          <li><a href="post-shtikipedia.html">שטיקיפדיה</a></li>
+
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
@@ -91,9 +100,9 @@
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
-                          <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
-
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
+                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -101,15 +110,15 @@
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
-                          <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
-
-                          <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
-
-                          <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
-                          <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
+                          <li><a href="post-flier.html">⎙ הדפיסו פלאיירים</a></li>
+
+                          <li><a href="post-sucker-sticker.html">⎙ סטיקר “יצאת פראייר”</a></li>
+
+                          <li><a href="post-sefach.html">⎙ ספח מחאה לת.ז. ישנה</a></li>
+
+                          <li><a href="post-smbc-comics-nothing-to-hide.html">⎙ קומיקס להדפסה</a></li>
                       </ul>
                   </li>
                   <li class="dropdown">
@@ -160,7 +169,7 @@
           <div class="col-12">
             
             <p dir="rtl">צמד המלים “המאגר הביומטרי” הפך לשגור בתקשורת בשנים האחרונות, כהכנה למציאות חדשה שנרקמה, בעיקר מאחורי הקלעים, במסדרונות הכנסת. רבות נעשה כדי לקדם את המציאות הזו, שבה בישראל קיים מאגר ביומטרי, אבל מעט מאוד נעשה כדי לעזור לציבור הרחב להבין במה מדובר ומה הן ההשלכות של המאגר על חיי כולנו. עבור מי שמכירים את ההשלכות והסכנות, המסלול המהיר אל המאגר הביומטרי הוא מדרון חלקלק, אל מצב שבו הפרטיות של אזרחי מדינת ישראל מופקרת &#8211; בידי המדינה ושלוחותיה, כמו גם בידי גורמים בעלי אינטרס זר.</p>
-<p dir="rtl">חסרונו של שיח ציבורי בעניין הוליד בלבול ודיס-אינפורמציה ביחס לתחום. ראשית, כדאי להבדיל בין תחום הזיהוי הביומטרי והמאגר הביומטרי עצמו. זיהוי ביומטרי הוא שם למגוון טכניקות שנועדו לזהות בני אדם על פי תכונות פיזיולוגיות או התנהגותיות. השימוש בזיהוי ביומטרי הוא לרוב לצורך בקרת גישה, למשל כדי לאפשר גישה בלעדית לרכוש מאובטח על ידי סריקת טביעת האצבע בכניסה לחדר או ברכב.</p>
+<p dir="rtl">חסרונו של שיח ציבורי בעניין הוליד בלבול ו<a title="שטיקיפדיה - ההטעיות וההשמטות בתעמולה למען המאגר" href="http://is.gd/shtikipedia" target="_blank"><strong>דיס-אינפורמציה</strong></a> ביחס לתחום. ראשית, כדאי להבדיל בין תחום הזיהוי הביומטרי והמאגר הביומטרי עצמו. זיהוי ביומטרי הוא שם למגוון טכניקות שנועדו לזהות בני אדם על פי תכונות פיזיולוגיות או התנהגותיות. השימוש בזיהוי ביומטרי הוא לרוב לצורך בקרת גישה, למשל כדי לאפשר גישה בלעדית לרכוש מאובטח על ידי סריקת טביעת האצבע בכניסה לחדר או ברכב.</p>
 <p dir="rtl">תעודת הזהות הביומטרית, למשל, משתמשת בטכנולוגיה הזו. הטכנולוגיה הזו מונעת התחזות. הקלות שבה ניתן כיום לזייף תעודות היתה אחד הטיעונים שבאמצעותם קודם חוק המאגר הביומטרי, אך חשוב לדעת – בין יצירת תעודות שבהן מצוי המידע הביומטרי, לבין שמירת אותו מידע במאגר שמידת בטיחותו מוטלת בספק, יש מרחק גדול. המרחק שבין צורך בטחוני מיידי של האזרחים והמדינה לבין אילתור פרימיטיבי חסר מודעות בסיסית לאבטחה.</p>
 <p dir="rtl"><strong>אז מהו מאגר ביומטרי</strong></p>
 <p dir="rtl">מאגר ביומטרי הוא מאגר שבו נשמר עותק של הנתונים הביומטריים. להבדיל מתעודת הזהות הביומטרית, שנשארת תמיד ברשות האזרח, המאגר הביומטרי הוא ממוחשב ונמצא ברשות פקידי המדינה. זה אומר שיש קבוצת אנשים שיכולה לזהות אותי בלי שיתוף פעולה מצדי. מספיק לצלם את הפנים שלי. הקבוצה הזאת אמורה להיות גדולה מלכתחילה (יש הרבה שוטרים, למשל) והיא תגדל לפי רצונו השרירותי של הממשל (הזה, או ממשל אחר שיבוא אחריו).  אם יתחילו לדלוף נתונים מהמאגר, קבוצת האנשים שיוכלו לזהות אותך בניגוד לרצונך באמצעות טלפון חכם תלך ותגדל ותכלול פושעים, טרוריסים, חברות ביטוח ובלשים לענייני גירושין (שלך או של אנשים שפגשת פעם). מומחי אבטחה וארגונים לזכויות הפרט הדגישו בשנים האחרונות את הסכנה של דליפת מידע, ומדי יום מתגלות דליפות חדשות בארץ ובעולם. כדוגמה לסכנה זו אפשר להזכיר את גניבתו החוזרת ונשנית של מרשם האוכלוסין הישראלי, שהודלף לרשת לראשונה בשנת 2006.</p>
