--- a/html/post-other-countries.html
+++ b/html/post-other-countries.html
@@ -14,15 +14,18 @@
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top">
+      <div class="navbar navbar-fixed-top" role="nagivation">
         <div class="container">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href=".">m.No2Bio.org</a>
-          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
+              <!-- <span class="sr-only">Toggle navigation</span> -->
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          </div>
+          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown active">
@@ -33,11 +36,15 @@
 
                           <li><a href="post-foreigners.html">אם אסע לארה”ב, יוכנסו נתוני הביומטריים למאגר שלהם. מה ההבדל?</a></li>
 
+                          <li><a href="post-teenagers.html">ביה”ס יכול להכריח אותי?</a></li>
+
                           <li><a href="post-will-it-be-protected.html">האם המאגר הביומטרי יהיה מוגן בפני עבריינים?</a></li>
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
                           <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
+                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -80,6 +87,8 @@
 
                           <li><a href="post-doron-ofek-democracy.html">שהדמוקרטיה לא תעלה לכם לראש</a></li>
 
+                          <li><a href="post-shtikipedia.html">שטיקיפדיה</a></li>
+
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
@@ -91,9 +100,9 @@
 
                           <li><a href="post-dont-give-the-finger.html">אל תתנו להם אצבע!</a></li>
 
-                          <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
-
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
+                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -101,15 +110,15 @@
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
 
-                          <li><a href="post-bio-ad-meme.html">מים “בטוח שכדאי”</a></li>
-
-                          <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
-
-                          <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
-                          <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
+                          <li><a href="post-flier.html">⎙ הדפיסו פלאיירים</a></li>
+
+                          <li><a href="post-sucker-sticker.html">⎙ סטיקר “יצאת פראייר”</a></li>
+
+                          <li><a href="post-sefach.html">⎙ ספח מחאה לת.ז. ישנה</a></li>
+
+                          <li><a href="post-smbc-comics-nothing-to-hide.html">⎙ קומיקס להדפסה</a></li>
                       </ul>
                   </li>
                   <li class="dropdown">
@@ -159,7 +168,9 @@
         <div class="row">
           <div class="col-12">
             
-            <p dir="rtl">בניגוד לשקרים וחצאי אמיתות שמפוזרים בנושא, <a href="https://www.youtube.com/watch?v=4rGEMy3Usxo" target="_blank">נכון להיום</a> – המדינות המערביות היחידות בהן מדובר על מאגר ביומטרי חובה לכל האזרחים הן ספרד ומקסיקו*.  יש מדינות אחרות (כמו אנגליה וצרפת), בהן ניסה הממשל להקים מאגר כזה ונכשל בגלל התנגדות הציבור וגורמים מקרב השלטון עצמו. קיימות גם מדינות כמו שויץ אשר מתחזקות מאגר ביומטרי אך לאזרח נשמרת זכות הבחירה אם להצטרף אליו. בספרד ההתנגדות נמצאת בעיצומה ומקסיקו נמצאת תחת לחץ עצום של ארה&#8221;ב. אנחנו בכל אופן מקווים שישראל תצטרף למדינות הדמוקרטיות המובהקות בהן בוטל הרעיון להקים מאגר, או שהיה ברור מאליו שאין להציע כזה כלל (כמו בגרמניה).</p>
+            <p dir="rtl">בניגוד לשקרים וחצאי אמיתות שמפוזרים בנושא, <a href="https://www.youtube.com/watch?v=4rGEMy3Usxo" target="_blank">נכון להיום</a> – המדינות המערביות היחידות בהן מדובר על מאגר ביומטרי חובה לכל האזרחים הן ספרד ומקסיקו*.  יש מדינות אחרות (כמו אנגליה וצרפת), בהן ניסה הממשל להקים מאגר כזה ונכשל בגלל התנגדות הציבור וגורמים מקרב השלטון עצמו. קיימות גם מדינות כמו שווייץ, המתחזקות מאגר ביומטרי אך לאזרח נשמרת זכות הבחירה אם להצטרף אליו.</p>
+<p dir="rtl">מדינות רבות <a href="en.wikipedia.org/wiki/Countries_applying_biometrics" target="_blank">משתמשות באמצעי זיהוי ביומטריים</a> אבל אינן מחזיקות מאגר, מתוך חשש לפגיעה בפרטיות ובחופש של אזרחיהן. בגרמניה, למשל, החוק מורה <a href="http://www.bamf.de/EN/Willkommen/Aufenthalt/eAufenthaltstitel/Datenschutz/datenschutz-node.html" target="_blank">למחוק את הנתונים הביומטריים</a> שנאספו לצורכי הזיהוי הראשוני. <a href="http://replies2gov.tomodo.me/GeneralInformation/Pages/BiometricsInWorld.aspx" target="_blank">בתעמולה של משרד הפנים</a> לעידוד הציבור הישראלי להצטרף למאגר מונים יותר מ-100 מדינות שמשתמשות בביומטריה, אבל לא מזכירים את העובדה שרוב המכריע של המקרים מדובר על ביומטריה ללא מאגר.</p>
+<p dir="rtl">בספרד ההתנגדות נמצאת בעיצומה ומקסיקו נמצאת תחת לחץ עצום של ארה&#8221;ב. אנחנו בכל אופן מקווים שישראל תצטרף למדינות הדמוקרטיות המובהקות בהן בוטל הרעיון להקים מאגר.</p>
 <p><iframe src="//www.youtube.com/embed/4rGEMy3Usxo" height="315" width="560" allowfullscreen="" frameborder="0"></iframe></p>
 <h6 dir="rtl">האם יש מאגרים ביומטריים במדינות מערביות? גיא זוהר, ערוץ 10</h6>
 <p dir="rtl">___________________</p>
