--- a/html/post-sucker-sticker.html
+++ b/html/post-sucker-sticker.html
@@ -25,7 +25,7 @@
             </button>
             <a class="navbar-brand" href=".">m.No2Bio.org</a>
           </div>
-          <div id="top-collapse-menu" class="navbar-collapse collapse" style="overflow-y: scroll;max-height:400px">
+          <div id="top-collapse-menu" class="collapse nav-collapse">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
