--- a/html/index.html
+++ b/html/index.html
@@ -179,8 +179,8 @@
     <div id="footer">
       <div class="container">
         <p class="text-muted credit" dir="rtl">
-זו גירסת אלפא. רוצים לתרום html/css/js? בואו
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">למזלג את זה</a>.
+רוצים לתרום html/css/js או להציע תבנית חדשה?
+<a target="_blank" href="https://github.com/thedod/m.no2bio.org">מזלגו אותי</a>.
         </p>
       </div>
     </div>
