Change homepage youtube list

--- a/html/post-petition.html
+++ b/html/post-petition.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - חיתמו על העצומה</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -28,7 +27,7 @@
           </div>
           <div id="top-collapse-menu" class="collapse nav-collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
+                  <li><a href="index.html">בית</a></li>
                   <li class="dropdown">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
@@ -93,7 +92,7 @@
                           <li><a href="post-current-status.html">תמונת מצב</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לעשות<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -103,7 +102,7 @@
 
                           <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
 
-                          <li><a href="post-petition.html">חיתמו על העצומה</a></li>
+                          <li class="active"><a href="post-petition.html">חיתמו על העצומה</a></li>
 
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
@@ -162,30 +161,32 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-רוצים לתרום html/css/js או להציע תבנית חדשה?
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">מזלגו אותי</a>.
-        </p>
+        <div class="page-header text-center">
+          <h2>חיתמו על העצומה</h2>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            
+            <p dir="rtl">ב-9 בנובמבר 2008 התפרסמה לראשונה עצומה נגד חוק המאגר הביומטרי. בינתיים עבר החוק והפיילוט בעיצומו, אבל עדיין רלוונטי וחשוב לחתום עליה.</p>
+<h2 dir="rtl" style="text-align: center;"><a href="http://www.atzuma.co.il/no2bio" target="_blank">חיתמו על העצומה</a></h2>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
