--- a/html/post-costs.html
+++ b/html/post-costs.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - בית</title>
+    <title>m.No2Bio - כמה זה עולה לנו?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
   </head>
   <body>
     <!-- Wrap all page content here -->
@@ -28,8 +27,8 @@
           </div>
           <div id="top-collapse-menu" class="collapse nav-collapse">
             <ul class="nav navbar-nav">
-                  <li class="active"><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li><a href="index.html">בית</a></li>
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -45,7 +44,7 @@
 
                           <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
 
-                          <li><a href="post-costs.html">כמה זה עולה לנו?</a></li>
+                          <li class="active"><a href="post-costs.html">כמה זה עולה לנו?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -162,30 +161,80 @@
       </div>
 
       <!-- Begin page content -->
-      <div class="container visible-sm">
-        <div class="page-header text-center">
-          <img src="img/header280.png" width="280" height="41" border="0">
-        </div>
-        <p align="center"><iframe width="280" height="158" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-      <div class="container hidden-sm">
-        <div class="page-header text-center">
-          <img src="img/header560.png" width="560" height="82" border="0">
-        </div>
-        <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
-      </div>
-    </div>
-
-    <div id="footer">
       <div class="container">
-        <p class="text-muted credit" dir="rtl">
-רוצים לתרום html/css/js או להציע תבנית חדשה?
-<a target="_blank" href="https://github.com/thedod/m.no2bio.org">מזלגו אותי</a>.
-        </p>
+        <div class="page-header text-center">
+          <h2>כמה זה עולה לנו?</h2>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            
+            <p dir="rtl">מבקר המדינה העריך את עלות פרויקט התיעוד החכם ב<strong>כמיליארד ש&#8221;ח </strong>(<a href="https://dubiousdod.org/mevaker2010tz.pdf" target="_blank">עמ&#8217; 32</a>, פיסקה שניה מהסוף). מתוכם, עלות הנפקת התעודות עצמן כ-270 מיליון ש&#8221;ח, והשאר מיועד להקמת מערך האיסוף, הקמת המאגר הביומטרי ומימון הרשות לניהולו. אולם, ניסיון העבר מראה שהערכות עלות של פרויקט טרם תחילתו נוטות לאופטימיות קיצונית. עלות הפרויקט הבריטי נאמדה ב-10.6 מיליארד ליש&#8221;ט (בהתאמה לישראל, מעל לחמישה מיליארד ש&#8221;ח), בטרם בוטל. השר מיכאל איתן העריך את עלות ה<strong></strong>פרוייקט ב&#8221;<a href="http://www.calcalist.co.il/internet/articles/0,7340,L-3334748,00.html" target="_blank">מיליארדי שקלים</a>&#8220;.</p>
+<p dir="rtl">פירוט התקציבים עד סוף שנת 2014 (כלומר חצי שנה לפני סיום הפיילוט) לא כולל <a href="http://budget.msh.gov.il/#0068050113,2011,1,1,1,1,0,0,0,0,0,0" target="_blank">10 מיליון ש&#8221;ח</a> תקציב פרסום/תעמולה ו<a href="http://www.telecomnews.co.il/%D7%94%D7%94%D7%A4%D7%A7%D7%A8%D7%95%D7%AA-%D7%91%D7%9B%D7%A1%D7%A4%D7%99-%D7%94%D7%A6%D7%99%D7%91%D7%95%D7%A8-%D7%91%D7%9B%D7%9C-%D7%94%D7%A7%D7%A9%D7%95%D7%A8-%D7%9C%D7%9E%D7%90%D7%92%D7%A8-%D7%94%D7%91%D7%99%D7%95%D7%9E%D7%98%D7%A8%D7%99-%D7%A0%D7%9E%D7%A9%D7%9B%D7%AA.html" target="_blank">תוספות שאושרו לאחרונה</a>:</p>
+<table class="table table-condensed table-striped table-hover" dir="rtl" border="0" cellspacing="0">
+<tbody>
+<tr>
+<th height="38"><strong>סעיף תקציבי</strong></th>
+<th><strong>תעודות זיהוי חכמות</strong><br />
+<a href="http://budget.msh.gov.il/#00680501,2011,1,1,1,1,0,0,0,0,0,0" target="_blank">68-05-01</a>, <a href="http://budget.msh.gov.il/#00681103,2013,0,1,1,1,0,0,0,0,0,0" target="_blank">68-11-03</a></th>
+<th><strong>הרשות למאגר הביומטרי</strong><br />
+<a href="http://budget.msh.gov.il/#006807,2011,1,1,1,1,0,0,0,0,0,0" target="_blank">68-07</a>, <a href="http://budget.msh.gov.il/#0068110118,2013,0,1,1,1,0,0,0,0,0,0" target="_blank">68-11-01-18</a></th>
+<th><strong>סה”כ</strong></th>
+</tr>
+<tr>
+<th>עד 2010</th>
+<td>159,976,000.00</td>
+<td></td>
+<td><strong>159,976,000.00</strong></td>
+</tr>
+<tr>
+<th>2011</th>
+<td>226,271,000.00</td>
+<td>9,371,000.00</td>
+<td><strong>235,642,000.00</strong></td>
+</tr>
+<tr>
+<th>2012</th>
+<td>142,302,000.00</td>
+<td>9,286,000.00</td>
+<td><strong>151,588,000.00</strong></td>
+</tr>
+<tr>
+<th>2013</th>
+<td>111,343,000.00</td>
+<td>37,226,000.00</td>
+<td><strong>148,569,000.00</strong></td>
+</tr>
+<tr>
+<th>2014</th>
+<td>107,667,000.00</td>
+<td>35,662,000.00</td>
+<td><strong>143,329,000.00</strong></td>
+</tr>
+<tr>
+<th><strong>סה”כ</strong></th>
+<td><strong>747,559,000.00</strong></td>
+<td><strong>91,545,000.00</strong></td>
+<td><span style="text-decoration: underline;"><strong>839,104,000.00</strong></span></td>
+</tr>
+</tbody>
+</table>
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!--
+    <script type="text/javascript" src="js/jquery.browser.js"></script>
+    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
+    <script type="text/javascript">
+      $(function() {
+        $('iframe').iframeAutoHeight();
+      });
+    </script>
+-->
   </body>
 </html>
+
