[hopefully] fix meu bugs

--- a/html/post-dani-dolev.html
+++ b/html/post-dani-dolev.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
+<!--
   <style type="text/css">
   body { padding-top: 50px; }
   </style>
+-->
   </head>
   <body>
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top" role="nagivation">
+      <div class="navbar navbar-default" role="nagivation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
@@ -190,15 +192,6 @@ P { margin-bottom: 0.08in; }A:link {  }
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<!--
-    <script type="text/javascript" src="js/jquery.browser.js"></script>
-    <script type="text/javascript" src="js/jquery.iframe-auto-height.plugin.js"></script>
-    <script type="text/javascript">
-      $(function() {
-        $('iframe').iframeAutoHeight();
-      });
-    </script>
--->
   </body>
 </html>
 
