--- a/html/contact.html
+++ b/html/contact.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
+<!--
   <style type="text/css">
   body { padding-top: 50px; }
   </style>
   </head>
+-->
   <body>
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top" role="nagivation">
+      <div class="navbar navbar-default" role="nagivation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
