--- a/html/index.html
+++ b/html/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.rtl.min.css" rel="stylesheet" media="screen">
-    <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet">
-  <!-- <style type="text/css">
+    <!-- <link href="css/sticky-footer-navbar.rtl.css" rel="stylesheet"> -->
+<!--
+  <style type="text/css">
   body { padding-top: 50px; }
-  </style> -->
+  </style>
+-->
   </head>
   <body>
     <!-- Wrap all page content here -->
     <div id="wrap" dir="rtl">
             <!-- Fixed navbar -->
-      <div class="navbar navbar-fixed-top" role="nagivation">
+      <div class="navbar navbar-default" role="nagivation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-collapse-menu">
@@ -175,7 +177,7 @@
         <p align="center"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLD3C1ACEC3C8E423C&cc_lang_pref=he" frameborder="0" allowfullscreen></iframe></p>
       </div>
     </div>
-
+<!--
     <div id="footer">
       <div class="container">
         <p class="text-muted credit" dir="rtl">
@@ -184,7 +186,7 @@
         </p>
       </div>
     </div>
-
+-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
